--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.11.0
+      - image: circleci/golang:1.11.1
     steps:
       - checkout
-      - run: make cibuild
+      - run: make test
+      - run: make
 
   build-release:
     docker:
-      - image: circleci/golang:1.11.0
+      - image: circleci/golang:1.11.1
     steps:
       - checkout
       - run: VERSION="${CIRCLE_TAG}" make dist
@@ -20,7 +21,7 @@ jobs:
 
   upload-release:
     docker:
-      - image: circleci/golang:1.11.0
+      - image: circleci/golang:1.11.1
     steps:
       - checkout
       - restore_cache:
@@ -51,7 +52,7 @@ jobs:
 
 workflows:
   version: 2
-  build-n-release:
+  build-n-upload:
     jobs:
       - build:
           filters:
